--- a/calendrier.html
+++ b/calendrier.html
@@ -9296,7 +9296,8 @@
                         Autre : Voir Observations
                     </option>
                 </select>
-                <input type="number" id="NombreHeures" placeholder="Nombre d'heures" data-i18n-placeholder="placeholder_hours" min="0" step="0.5">
+                <input type="text" id="Observations" placeholder="Observations" data-i18n-placeholder="placeholder_observations">
+                <input type="number" id="NombreHeures" placeholder="Nombre d'heures" data-i18n-placeholder="placeholder_hours" min="0" step="0.25">
 
                 <!-- Ajoutez cette section après le select Travail -->
                 <div class="form-group">
