--- a/calendrier.html
+++ b/calendrier.html
@@ -9565,7 +9565,6 @@
                   </select>
 
 
-
                     <div id="bimonthly-options" style="display:none; margin-top:10px;">
                         <div style="margin-bottom: 10px;">
                             <label>Tous les :</label>
@@ -9629,6 +9628,22 @@
                                     <option value="3">3 semaines</option>
                                     <option value="4">4 semaines</option>
                                 </select>
+                            </div>
+
+                            <span>Jours :</span>
+                            <div class="weekly-grid">
+                                <!-- COPIER EXACTEMENT le même contenu que #weekly-options -->
+                                <div class="column">
+                                    <label><span>Lundi</span><input type="checkbox" value="monday"></label>
+                                    <label><span>Mardi</span><input type="checkbox" value="tuesday"></label>
+                                    <label><span>Mercredi</span><input type="checkbox" value="wednesday"></label>
+                                    <label><span>Jeudi</span><input type="checkbox" value="thursday"></label>
+                                </div>
+                                <div class="column">
+                                    <label><span>Vendredi</span><input type="checkbox" value="friday"></label>
+                                    <label><span>Samedi</span><input type="checkbox" value="saturday"></label>
+                                    <label><span>Dimanche</span><input type="checkbox" value="sunday"></label>
+                                </div>
                             </div>
                         </div>
 
