--- a/calendrier.html
+++ b/calendrier.html
@@ -9631,7 +9631,7 @@
                             </div>
 
                             <span>Jours :</span>
-                            <div class="weekly-grid">
+                            <div class="weekly-days-grid">
                                 <!-- COPIER EXACTEMENT le même contenu que #weekly-options -->
                                 <div class="column">
                                     <label><span>Lundi</span><input type="checkbox" value="monday"></label>
@@ -9649,7 +9649,7 @@
 
                         <div id="weekly-options" style="display:none; margin-top:10px;">
                             <span data-i18n="recurrence_days">Jours :</span>
-                            <div class="weekly-grid">
+                            <div class="weekly-days-grid">
                                 <div class="column">
                                     <label><span data-i18n="day_monday">Lundi</span><input type="checkbox" value="monday"></label>
                                     <label><span data-i18n="day_tuesday">Mardi</span><input type="checkbox" value="tuesday"></label>
